--- a/front/package.json
+++ b/front/package.json
@@ -24,11 +24,14 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "autoprefixer": "^10.4.14",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.0",
-    "prettier": "^2.8.7"
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.2"
   }
 }
