--- a/front/package.json
+++ b/front/package.json
@@ -12,9 +12,11 @@
     "test": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}' && npm run format"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.16.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "contentful": "^10.2.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
